# nf-core-soillifeatlas

./: .gitignore  .nf-core.yml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml  ro-crate-metadata.json
.devcontainer/: setup.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch.yml  ci.yml  download_pipeline.yml  fix_linting.yml  full-demo.yml
assets/: adaptivecard.json  email_template.html  email_template.txt  schema_input.json  sendmail_template.txt  slackreport.json
conf/: base.config  local.config
docs/: ARCHITECTURE.md  README.md  output.md  usage.md
docs/website-export/: README.md  badges.md  command_generator.js  dag.README.md  demo_bundle_manifest.md  form_schema.json  metrics.json  pipeline_blurb.md  results_mock.html
lib/soillifeatlas/: __init__.py  corrections.py  decomposition.py  evaluation.py
lib/soillifeatlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modules/local/: correct_l2_is.nf  correct_l3_rie.nf  correct_l5_refilter.nf  decompose.nf  diagnostic_top_features.nf  eval_plausibility.nf  eval_treatment.nf  fetch_atlas.nf  simper_match.nf
scripts/: build_tiny_atlas_bundle.py  gen_mgf_fixtures.py  gen_tiny_fixtures.py
subworkflows/local/: decompose_apply.nf
tests/: default.nf.test  nextflow.config
tests/modules/: correct_l2_is.nf.test  correct_l3_rie.nf.test  correct_l5_refilter.nf.test  decompose.nf.test  (+5 more)
workflows/: apply.nf  soillifeatlas.nf
(+30 files in other folders)
