[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "soillifeatlas"
version = "0.1.0"
description = "Vendored framework for the nf-core/soillifeatlas pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "matchms>=0.27",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["lib"]
